Prevent overflow on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,6 @@
 .app {
   background: linear-gradient(#fff8e8, #fff 700px);
   height: 100vh;
+  overflow-x: hidden;
   width: 100vw;
 }
